; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mpegenc.c_put_timestamp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mpegenc.c_put_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @put_timestamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_timestamp(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = shl i32 %8, 4
  %10 = load i32, i32* %6, align 4
  %11 = ashr i32 %10, 30
  %12 = and i32 %11, 7
  %13 = shl i32 %12, 1
  %14 = or i32 %9, %13
  %15 = or i32 %14, 1
  %16 = call i32 @avio_w8(i32* %7, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %6, align 4
  %19 = ashr i32 %18, 15
  %20 = and i32 %19, 32767
  %21 = shl i32 %20, 1
  %22 = or i32 %21, 1
  %23 = call i32 @avio_wb16(i32* %17, i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = and i32 %25, 32767
  %27 = shl i32 %26, 1
  %28 = or i32 %27, 1
  %29 = call i32 @avio_wb16(i32* %24, i32 %28)
  ret void
}

declare dso_local i32 @avio_w8(i32*, i32) #1

declare dso_local i32 @avio_wb16(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
